[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/MathPlot/Components/MathBoard.gd" type="Script" id=1]
[ext_resource path="res://scripts/Scene/PlotController.gd" type="Script" id=2]

[node name="World" type="Node2D"]

[node name="Background" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="MathBoard" type="ColorRect" parent="Background"]
margin_right = 800.0
margin_bottom = 800.0
rect_pivot_offset = Vector2( 132.426, 350.843 )
rect_clip_content = true
color = Color( 0.278431, 0.278431, 0.278431, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddBtn" type="Button" parent="Background"]
margin_left = 38.0
margin_top = 31.5676
margin_right = 152.0
margin_bottom = 78.5676
shortcut_in_tooltip = false
text = "Add Sin fn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeExtentBtn" type="Button" parent="Background"]
margin_left = 40.0
margin_top = 162.0
margin_right = 156.0
margin_bottom = 211.0
text = "Change Extents"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveBtn" type="Button" parent="Background"]
margin_left = 37.0
margin_top = 101.0
margin_right = 154.0
margin_bottom = 147.0
text = "Remove Sin fn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToCosBtn" type="Button" parent="Background"]
margin_left = 38.069
margin_top = 230.753
margin_right = 161.069
margin_bottom = 279.753
rect_pivot_offset = Vector2( 61.5, 24.5 )
text = "Change to Cos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddGrid" type="Button" parent="Background"]
margin_left = 39.7127
margin_top = 309.649
margin_right = 162.713
margin_bottom = 358.649
rect_pivot_offset = Vector2( 61.5, 24.5 )
text = "Add Grid"
__meta__ = {
"_edit_use_anchors_": false
}
